--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>fivv's site</title>
+        <title>vlosk｡*ﾟ.*.｡(っ ᐛ )っ✂╰⋃╯</title>
     </head>
 
     <body>
-        <h1>hello, this is fivv's site :Pogey:</h1>
+        <h1>hello, this is fivv's site ｡*ﾟ.*.｡(っ ᐛ )っ✂╰⋃╯</h1>
     </body>
 </html>
