--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>vlosk｡*ﾟ.*.｡(っ ᐛ )っ✂╰⋃╯</title>
+        <title>vlosk ｡*ﾟ.*.｡(っ ᐛ )っ✂╰⋃╯</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="favicon.png" type="image/gif">
+        <meta content="vlosk" property="og:title" />
+        <meta content="i love poopin" property="og:description" />
+        <meta content="#241400" data-react-helmet="true" name="theme-color" />
     </head>
 
     <body>
-        <h1>hello, this is fivv's site ｡*ﾟ.*.｡(っ ᐛ )っ✂╰⋃╯</h1>
+        <h1>hello, this is fivv's site! ｡*ﾟ.*.｡(っ ᐛ )っ✂╰⋃╯</h1>
+        <hr class="dashed">
     </body>
 </html>
