--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
     <body>
         <h1>hello, this is fivv's site! ｡*ﾟ.*.｡(っ ᐛ )っ✂╰⋃╯</h1>
-        <hr class="dashed">
+        <hr class="solid">
     </body>
 </html>
