--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <body>
         <h1>hello, this is fivv's site! ｡*ﾟ.*.｡(っ ᐛ )っ✂╰⋃╯</h1>
         <hr class="solid">
-        <a href="https://cdn.discordapp.com/attachments/911511470632730635/911633817628983306/Screenshot_20211120-123334_WhatsApp.jpg">very scary, dont click on this!</a>
-        <a href="https://youareanidiot.cc">this is way more scarier!</a>
+        <p><a href="https://cdn.discordapp.com/attachments/911511470632730635/911633817628983306/Screenshot_20211120-123334_WhatsApp.jpg">very scary, dont click on this!</a></p>
+        <p><a href="https://youareanidiot.cc">this is way more scarier!</a></p>
         <hr class="solid">
-        <a href="https://github.com/haxio/mamka200pro3.github.io">modified version of this site by haxi0</a>
-        <a href="https://github.com/MAMKA200PRO3/mamka200pro3.github.io">original github link of this site</a>
+        <p><a href="https://github.com/haxio/mamka200pro3.github.io">modified version of this site by haxi0</a></p>
+        <p><a href="https://github.com/MAMKA200PRO3/mamka200pro3.github.io">original github link of this site</a></p>
     </body>
 </html>
